[workspace]
resolver = "2"
members = [
    "avs/incredible-squaring-avs",
    "avs/tangle-avs",
    "aws",
    "contracts",
    "utils",
    "eigensdk-rs",
    "fireblocks-client",
]

[workspace.package]
edition = "2021"
authors = ["Webb Technologies Inc."]
license = "GPL-3.0"
homepage = "https://tangle.tools"
repository = "https://github.com/webb-tools/eigensdk-rs"

[workspace.dependencies]
# Eigen SDK Libraries
aws-kms = { path = "./aws" }
eigen-contracts = { path = "./contracts" }
eigen-utils = { path = "./utils" }
fireblocks-client = { path = "./fireblocks-client" }

# AVS examples
incredible-squaring-avs = { path = "./avs/incredible-squaring-avs" }
tangle-avs = { path = "./avs/tangle-avs" }

gadget-common = { git = "https://github.com/webb-tools/gadget", default-features = false }
gadget-executor = { git = "https://github.com/webb-tools/gadget", default-features = false }

# ARK Libraries
ark-std = { version = "0.4.0", default-features = false, features = ["print-trace", "std"] }
ark-crypto-primitives = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.2", default-features = false }
ark-poly = { version = "0.4.2", default-features = false }
ark-ec = { version = "0.4.2", default-features = false }
ark-relations = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.2", default-features = false, features = ["derive"] }
ark-groth16 = { version = "0.4.0", default-features = false }

# ARK curves
ark-bls12-381 = { version = "0.4", default-features = false, features = ["curve"] }
ark-bn254 = { version = "0.4", default-features = false, features = ["curve"] }
ark-secp256k1 = { version = "0.4", default-features = false }
ark-ed25519 = { version = "0.4", default-features = false }

base64 = "0.22.1"
tokio-rustls = "0.24.1"
tokio = { version = "1.32.0", default-features = false }
tokio-util = { version = "0.7.10", default-features = false }
bincode2 = { version = "2" }
bincode = "1.3.3"
byteorder = { version = "1.5.0", default-features = false }
futures-util = "0.3.30"
serde = { version = "1.0.197", default-features = false }
serde_json = "1.0"
url = { version = "2.5", default-features = false }
async-trait = "0.1.73"
log = "0.4.20"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
tracing-core = { version = "0.1.32", default-features = false }
parking_lot = "0.12.1"
futures = "0.3.30"
hex = { version = "0.4.3", default-features = false }
auto_impl = "1.1.0"
uuid = "1.4.1"
bytes = "1.5.0"
serde_bytes = { version = "0.11.12", default-features = false }
itertools = "0.12.0"
strum = "0.26"
clap = "4.0.32"
color-eyre = { version = "0.6", features = [
    "tracing-error",
    "color-spantrace",
    "issue-url",
] }
hex-literal = "0.4.1"
rand = "0.8.5"
rand_core = "0.6"
getrandom = { version = "0.2.12", default-features = false }
rand_chacha = { version = "0.3.1" }
jsonrpsee = "0.16.2"
linked-hash-map = { version = "0.5.6", default-features = false }
k256 = { version = "0.13.2", default-features = false }
p256 = { version = "0.13.2", default-features = false }
signature = "2.2.0"
starknet-crypto = "0.6.1"
anyhow = "1.0.79"
libsecp256k1 = "0.7.1"
rayon = { version = "1.8.0" }
thiserror = { version = "1" }
aes-gcm = { version = "0.10", default-features = false, features = [
    "aes",
    "alloc",
    "getrandom",
    "zeroize",
] }
zeroize = { version = "1", default-features = false, features = [
    "alloc",
    "zeroize_derive",
] }
prometheus = { version = "0.13.0", default-features = false }
lazy_static = "1.4.0"
sqlx = "=0.7.3"
postcard = "1.0.8"
sha2 = "0.10.8"
derivation-path = "0.2.0"
libp2p = { git = "https://github.com/libp2p/rust-libp2p/", default-features = false, rev = "3644879956b6ab93b8d23553a33e8fdb838f576f" }
structopt = "0.3.26"
env_logger = "0.11.3"
regex = "1.10.4"
num-bigint = "0.4.5"
reqwest = "0.12.4"
tree_magic_mini = "3.1.5"
jsonwebtoken = "9.3.0"
rsa = "0.9.6"
pretty_env_logger = "0.5.0"
scrypt = "0.11.0"
chacha20poly1305 = "0.10.1"
aws-config = "1.5.0"
aws-types = "1.3.0"
aws-sdk-s3 = "1.32.0"
aws-sdk-secretsmanager = "1.31.0"
aws-sdk-kms = "1.29.0"
picky-asn1-der = "0.5.0"
hyper = "1.3.1"
pin-project-lite = "0.2.14"
http-body-util = "0.1.1"

anvil = { git = "https://github.com/foundry-rs/foundry.git" }
foundry-common = { git = "https://github.com/foundry-rs/foundry.git" }
alloy-chains = "0.1.23"
alloy-primitives = "0.7.7"
alloy-dyn-abi = "0.7.7"
alloy-sol-types = "0.7.7"
alloy-rlp = "0.3.7"
alloy-trie = "0.4.1"
alloy-rpc-types = { version = "0.2.0" }
alloy-rpc-types-anvil = { version = "0.2.0" }
alloy-rpc-types-eth = { version = "0.2.0" }
alloy-rpc-types-trace = { version = "0.2.0" }
alloy-rpc-types-engine = { version = "0.2.0" }
alloy-genesis = { version = "0.2.0" }
alloy-node-bindings = { version = "0.2.0" }
alloy-provider = { version = "0.2.0", default-features = false, features = [
    "reqwest","ws"
] }
alloy-pubsub = { version = "0.2.0" }
alloy-transport-http = { version = "0.2.0" }
alloy-eips = { version = "0.2.0", default-features = false }
alloy-signer = { version = "0.2.0" }
alloy-signer-local = { version = "0.2.0" }
alloy-network = { version = "0.2.0" }
alloy-consensus = { version = "0.2.0" }
alloy-contract = { version = "0.2.0" }
alloy-transport =  { version = "0.2.0" }
alloy-transport-ws = { version = "0.2.0" }
alloy-rpc-client = { version = "0.2.0" }

# WebAssembly
wasmtime = { version = "8.0.1", default-features = false }
wasm-bindgen = { version = "0.2.92" }
wasmer = { version = "4.2.6", default-features = false }

[profile.dev.package.backtrace]
opt-level = 3
