[package]
name = "fireblocks-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["json"] }
tokio.workspace = true
hex.workspace = true
jsonwebtoken.workspace = true
uuid = { workspace = true, features = ["v4"] }
log.workspace = true
sha2.workspace = true
pretty_env_logger.workspace = true

alloy-provider.workspace = true
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-transport.workspace = true
alloy-network.workspace = true
alloy-rpc-types.workspace = true
