[package]
name = "test-utils"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "test_utils"
path = "src/lib.rs"

[[bin]]
name = "incredible_squaring"
path = "src/bin/incredible_squaring.rs"

[[bin]]
name = "tangle"
path = "src/bin/tangle.rs"

[dependencies]
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-sol-types.workspace = true
alloy-signer.workspace = true
alloy-signer-local = { workspace = true, features = ["keystore"] }
alloy-transport-ws.workspace = true

eigen-contracts.workspace = true
eigen-utils.workspace = true
incredible-squaring-avs.workspace = true
tangle-avs.workspace = true
k256 = { workspace = true, features = ["expose-field"] }
tokio.workspace = true
anvil.workspace = true
ethers.workspace = true
alloy-rpc-types-eth.workspace = true
#alloy-primitives = { workspace = true, features = ["rand"] }
#alloy-signer-local.workspace = true
log.workspace = true
env_logger.workspace = true
#getrandom.workspace = true
hex.workspace = true
#lazy_static.workspace = true
url.workspace = true
nix = "0.28.0"
