[package]
name = "tangle-avs"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-contract.workspace = true
alloy-primitives.workspace = true
alloy-provider = { workspace = true, features = ["hyper"] }
alloy-sol-types.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true
alloy-transport.workspace = true
eigen-utils.workspace = true

hex.workspace = true
#k256.workspace = true
k256 = { workspace = true, features = ["ecdsa"] }
log.workspace = true
thiserror.workspace = true

[dev-dependencies]
rand_core.workspace = true
anvil.workspace = true
foundry-common.workspace = true
tokio = { version = "1.38.0", features = ["full"] }
alloy = { version = "0.1.3", features = ["serde", "signers"] }
alloy-rpc-types-eth.workspace = true
alloy-rpc-client.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-contract.workspace = true
alloy-sol-types.workspace = true
alloy-signer-local.workspace = true
log.workspace = true
env_logger.workspace = true
getrandom.workspace = true
#addr2line.workspace = true
hex.workspace = true
lazy_static.workspace = true
url.workspace = true

[features]
default = []
tangle = []
